# fortune-api

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/:  phrases.json  stories.md
src/: __init__.py  bootstrap.py  config.py  controllers.py  models.py  schemas.py
src/common/decorators/: token_required.py
src/common/ioc/: __init__.py  module.py
src/common/utils/: __init__.py  module_path.py
src/config/: __init__.py  connexion_config.py  sqlalchemy_config.py
src/controllers/: __init__.py  auth_controller.py  ticket_controller.py  user_controller.py
src/models/: __init__.py  ticket_model.py  user_model.py
src/pages/: __init__.py
src/proxies/: __init__.py  auth_proxy.py  ticket_proxy.py  user_proxy.py
src/repositories/: __init__.py  ticket_repository.py  user_repository.py
src/schemas/: __init__.py  ticket_schema.py  user_schema.py
src/services/: __init__.py  ticket_service.py  user_service.py
src/swagger/: swagger.yml
