[tool.poetry]
name = "fortune-api"
version = "0.1.0"
description = ""
authors = ["CamiaCL <camilaclary@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.20.0"
flask-marshmallow = "^0.14.0"
waitress = "^2.1.2"
marshmallow-sqlalchemy = "^0.28.1"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
